--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cashmate-Track Your Bills</title>
+    <title>Cashmate-Track Your Expenses</title>
     <link rel="stylesheet" href="static/style1.css">
     <script src="https://kit.fontawesome.com/7ba314f90c.js" crossorigin="anonymous"></script>
 </head>
