--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
                 <img src="static/logo.jpg" alt="logo">
             </div>
             <div class="form-group">
-                <h3>CashMate-Track Your Bills</h3>
+                <h3>CashMate-Track Your Expenses</h3>
             </div>
             <div class="form-group">
                 <i class="fa-solid fa-envelope"></i><input class="wide" type="email" name="email"
