--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
                 <img src="static/logo.jpg" alt="logo">
             </div>
             <div class="form-group">
-                <h3>CashMate-Track Your Bills</h3>
+                <h3>CashMate-Track Your Expenses</h3>
             </div>
             <div class="form-group">
                 <input type="text" name="name" placeholder="Enter Username" minlength="6" required>
