--- a/viewincome.html
+++ b/viewincome.html
@@ -12,7 +12,8 @@
 <body>
     <i class="fa-solid fa-arrow-left-long view" onclick="window.location.href ='/'"></i>
     <div id="income-list">
-        </ul>
+        
+    </div>
 </body>
 
 </html>
